--- a/src/components/EditModal/EditModal.sass
+++ b/src/components/EditModal/EditModal.sass
@@ -43,6 +43,29 @@
       color: var(--text-secondary)
       margin-bottom: 1rem
 
+    .edit-rating
+      margin-bottom: 1rem
+      font-size: 1rem
+      color: var(--text-secondary)
+
+      .rating-number
+        display: block
+        margin-bottom: 0.3rem
+        text-align: center
+
+      .rating-bar-wrapper
+        width: 100%
+        height: 8px
+        background-color: #333
+        border-radius: 5px
+        overflow: hidden
+
+      .rating-bar
+        height: 100%
+        background: var(--accent-gradient)
+        border-radius: 5px
+        transition: width 0.3s ease
+
     .edit-tags
       margin-bottom: 1rem
       display: flex
