--- a/src/components/main/EditOfTheDay/EditOfTheDay.sass
+++ b/src/components/main/EditOfTheDay/EditOfTheDay.sass
@@ -27,6 +27,9 @@
     .video-container
       flex: 0 0 60%
       aspect-ratio: 16 / 9
+      display: flex
+      align-items: center
+      justify-content: center
       iframe
         width: 100%
         height: 100%
@@ -83,6 +86,7 @@
         margin-bottom: 1.5rem
 
       .fav-button
+        margin-bottom: 1rem
         align-self: flex-start
         background: none
         border: 1.5px solid var(--accent-plain)
