--- a/src/pages/edit/ModifyEdit/ModifyEdit.sass
+++ b/src/pages/edit/ModifyEdit/ModifyEdit.sass
@@ -28,19 +28,19 @@
         box-shadow: none
 
   .delete-icon
+    padding: 10px
     position: absolute
     top: 1rem
     right: 1rem
-    background: none
+    background: rgba(255, 0, 0, 0.3)
     border: none
     font-size: 1.5rem
     cursor: pointer
     color: var(--color-danger)
-    padding: 0.3rem
     border-radius: 50%
     transition: background 0.2s
     &:hover
-      background: rgba(255, 0, 0, 0.1)
+      background: rgba(255, 0, 0, 0.7)
 
 .delete-modal-overlay
   position: fixed
