--- a/src/components/Sidebar/Sidebar.sass
+++ b/src/components/Sidebar/Sidebar.sass
@@ -85,3 +85,44 @@
         font-weight: 600
 
 
+
+.hamburger__wrapper
+  position: fixed
+  top: 1rem
+  left: 1rem
+  z-index: 101
+  width: 48px
+  height: 48px
+  background: rgba(0, 0, 0, 0.5)
+  border-radius: 50%
+  display: none
+  align-items: center
+  justify-content: center
+
+.hamburger
+  padding: 0
+  flex-direction: column
+  justify-content: center
+  gap: 5px
+  width: 30px
+  height: 30px
+  background: none
+  border: none
+  cursor: pointer
+
+  .line
+    width: 100%
+    height: 3px
+    background: var(--text)
+    border-radius: 2px
+    transition: all 0.3s ease
+    background-color: var(--accent-plain)
+
+  .line.open:nth-child(1)
+    transform: rotate(45deg) translate(6px, 5px)
+
+  .line.open:nth-child(2)
+    opacity: 0
+
+  .line.open:nth-child(3)
+    transform: rotate(-45deg) translate(6px, -5px)
