--- a/src/components/profile/FavoritesSection/FavoritesSection.sass
+++ b/src/components/profile/FavoritesSection/FavoritesSection.sass
@@ -65,34 +65,60 @@
     gap: 20px
 
     .edit-card
-      background: var(--card-bg)
-      border: 1px solid var(--accent-plain)
-      border-radius: 10px
+      display: flex
+      flex-direction: column
+      justify-content: space-around
+      width: 160px
+      height: 260px
+      border-radius: 12px
       overflow: hidden
+      background-color: var(--card-bg)
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.4)
+      color: var(--text)
       cursor: pointer
-      transition: transform 0.2s ease, box-shadow 0.2s ease
+      transition: transform 0.3s ease, box-shadow 0.3s ease
 
       &:hover
-        transform: translateY(-4px)
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4)
+        transform: translateY(-6px)
+        box-shadow: 0 8px 20px var(--accent-secondary)
 
-      img
+      .image-wrapper
         width: 100%
-        height: auto
-        display: block
+        height: 50%
+
+        img
+          width: 100%
+          height: 100%
+          object-fit: cover
+          object-position: center
+          display: block
 
       .info
+        width: 100%
+        height: 50%
+        display: flex
+        flex-direction: column
+        justify-content: center
+        align-items: center
         padding: 10px
+        background-color: var(--card-bg)
+        text-align: center
+        gap: 4px
 
         h4
-          margin: 0 0 5px 0
           font-size: 16px
-          color: var(--text)
+          font-weight: 600
+          color: var(--accent-plain)
+          margin: 0
+          text-overflow: ellipsis
+          overflow: hidden
+          white-space: nowrap
+          max-width: 100%
 
         p
-          margin: 0
           font-size: 14px
           color: var(--text-secondary)
+          margin: 0
 
         span
           font-size: 12px
